[package]
name = "rustler_jieba"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "rustler_jieba"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }
lazy_static = "1.4.0"
# NIF 2.15 is from Erlang/OTP v22 which is pretty old. Should be good enough for broad compat.
rustler = { version = "0.31.0", default-features = false, features = ["derive", "nif_version_2_15"] }
